# git-redundancy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lifecycle.rs  main.rs  push.rs  render.rs  statusjson.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: classify.rs  lib.rs  model.rs  presence.rs  proofs.rs  status.rs  sync.rs  timefmt.rs
crates/io/: Cargo.toml
crates/io/src/: audit.rs  config.rs  discovery.rs  git.rs  inventory.rs  lib.rs  server.rs
crates/io/src/hooks/: post-receive  pre-receive
docs/: DEVELOPMENT.md  PROGRESS.md  SETUP.md  TROUBLESHOOTING.md
docs/adr/: 0000-record-architecture-decisions.md  0001-use-rust-for-the-cli.md  0002-functional-core-imperative-shell.md  0003-git-backend-hybrid.md  0004-fisma-high-aligned-not-certified.md  0005-fips-crypto-path-a-enforce-approved-algorithms.md  0006-command-scope-current-and-all-branches.md  0007-future-gui-tauri-keep-rust-core.md  0008-os-omarchy-on-both-ends.md  0009-ssh-transport-aliases-mdns-hostkey-pinned.md  0010-system-git-for-local-reads.md  0011-ci-fast-gates-plus-kani-every-push.md  0012-home-inventory-server-side-bare-repos.md  0013-lifecycle-commands-create-clone-sync.md  0014-status-ux-lifecycle-and-repo-detail.md  0015-backup-server-presence-column.md  0016-create-provisions-full-fleet-topology.md  0017-onboard-guided-walk-and-ignore-list.md  0018-repoint-backup-only-homes-into-current-topology.md  README.md
docs/examples/: tenx.conf
docs/journal/: 2026-06-17-ci-green-and-ssh-transport-wired.md  2026-06-17-first-implementation.md  2026-06-17-kickoff-and-design.md  2026-06-17-tests-proofs-and-ci.md  2026-06-18-2-lifecycle-commands.md  2026-06-18-3-home-aware-status.md  2026-06-18-4-json-homes-alias-and-supply-chain.md  2026-06-18-5-doc-sweep-and-server-message.md  2026-06-18-home-inventory-and-a-course-correct.md  2026-06-22-2-repoint-backup-only-homes.md  2026-06-22-3-greening-ci-coverage-debt.md  2026-06-22-onboard-guided-walk.md  README.md
supply-chain/: config.toml
