[package]
name = "git-redundancy-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure domain logic for git-redundancy (no IO): state types, working-tree parsing, sync classification."

[dependencies]

[dev-dependencies]
proptest = "1"

# `kani` is a real cfg set by `cargo kani`; declare it so check-cfg/clippy don't flag it.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
