[package]
name = "git-redundancy-io"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Imperative shell for git-redundancy: config, repo discovery, system-git invocation."

[dependencies]
git-redundancy-core.workspace = true
anyhow.workspace = true
serde.workspace = true
toml = "0.8"
# Comment- and format-preserving edits to config.toml (the `ignore` list, ADR-0017).
# Already in the tree via `toml 0.8`; used directly here.
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
